[522208] Updates dangling edge handling test and documentation
This change extends the existing dangling edge tests to test the default
behavior as well, not only the manually set values. Additionally, minor
documentation updates were added.

Change-Id: If6dd25c0afc078b2b76a7ac8948090d6a01804e3
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-1.6.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-1.6.adoc
@@ -20,7 +20,7 @@ ViatraQueryEngine engine = ViatraQueryEngine.on(scope);
 ----
 
 
-In case of the query scope is set to a subset of the entire model (e.g only one EMF resource within the resource set), model elements within the scope of the engine may have references pointing to elements outside the scope; these are called *dangling edges*. Previous versions of VIATRA made the assumption that the model is self-contained and free of dangling edges; the behavior of the query engine was unspecified (potentially incorrect match sets) if the model did not have this property. In VIATRA 1.6, this behavior was cleaned up by adding a new indexer mode that drops this assumption, and (with a minor cost to performance) always checks both ends of all indexed edges to be in-scope. For backward compatibility, the old behavior is used by default, but you can manually change this using the corresponding base index option as below. For new code we suggest to use the option to drop the dangling-free assumption, as it provides more consistent and intuitive results in a lot of cases; in a future VIATRA release this will be the new default.
+In case of the query scope is set to a subset of the entire model (e.g only one EMF resource within the resource set), model elements within the scope of the engine may have references pointing to elements outside the scope; these are called *dangling edges*. Previous versions of VIATRA made the assumption that the model is self-contained and free of dangling edges; the behavior of the query engine was unspecified (potentially incorrect match sets) if the model did not have this property. In VIATRA 1.6, this behavior was cleaned up by adding a new indexer mode that drops this assumption, and (with a minor cost to performance) always checks both ends of all indexed edges to be in-scope. To avoid surprises, the new behaviour is used by default, but if necessary, the old behavior can be accessed by manually changing the corresponding base index option as below. For new code we suggest to use the option to drop the dangling-free assumption, as it provides more consistent and intuitive results in a lot of cases; in a future VIATRA release this will be the new default.
 
 [[v16-danglingfree]]
 [source,java]
