[538847] Moves IModelConnector to a new plug-in
The IModelConnector interface provides a reusable block for accessing
models from any given Eclipse editor that was originally part of the
VIATRA Query Tooling. However, some users, most notably the validation
framework might want to rely on this functionality without all the
dependencies of the tooling, most notably Xtext.

To ensure this, a new viatra.query.runtime.ui plug-in was created, and
the IModelConnector interface was moved into that project, and all uses
and implementors of the interface was updated accordingly.

Change-Id: I41fa844e3d2b56b6f9b75bd436a5332f3be214bc
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.1.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.1.adoc
@@ -31,5 +31,6 @@ This is a breaking change as transformations using both priority '0' and '1' mig
 
 To make behaviour more predictable, the default configuration of the Local Search query engine no longer allows hybrid pattern matching in conjuction with the incremental query backend across pattern calls, i.e. if the caller pattern is evaluated with LS, so will the callee pattern during the same matcher invocation. To enable hybrid matching, where the local search backend may request results of called patterns from the incremental backend (in case the callee is declared `incremental pattern`), use configurations that explicitly enable this, such as `LocalSearchHints.getDefaultGenericHybrid()`. 
 
- 
+ === Query Runtime UI Project introduced
 
+ To support reusing model connectors without tooling dependencies, the IModelConnector interface and all its uses have been moved to a new `org.eclipse.viatra.query.runtime.ui` plugin, and it has been renamed accordingly. All adapters provided by VIATRA were updated to provide the new interface, the few existing users should request instances of `org.eclipse.viatra.query.runtime.ui.modelconnector.IModelConnector` instead. The new implementation behaves in exactly the same way than before.
